refactor: update Swagger documentation and DTOs for User and Wish modules to enhance response structures and improve data consistency
